<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OnePointNews</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="enter_tip">点击登录</string>
    <string name="explore">发现</string>
    <string name="settings">设置</string>
    <string name="collection">收藏</string>
    <string name="offline">离线</string>
    <string name="head_title">首页</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="slidcenter_title">选择兴趣，让你的新闻立即与众不同   >  </string>
	 <string name="guideview_item_bnt_text">点击进入 </string>
	 <string name="my_collection_tip">我都收藏（0）</string>
	  <string name="sina_enter">新浪用户登录</string>
	  <string name="weibo_enter">微博用户登录</string>
	    <string name="qq_enter">QQ用户登录</string>
	    <string name="register">新用户注册</string>
	    <string name="back">返回</string>
</resources>